--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,9 @@ html
   head
     meta(charset='utf-8')
     title= title
+    script(src="https://code.jquery.com/jquery-3.1.0.min.js")
   body
     h1= title
-    p Welcome to #{title}
+    #hello
+
+    script(src="/app.js")
