--- a/sentence.svg.tmpl
+++ b/sentence.svg.tmpl
@@ -8,7 +8,7 @@
   version="1.1"
   x="0px"
   y="0px"
-  viewBox="0 0 330 330"
+  viewBox="0 0 400 400"
 >
   <text
     xml:space="preserve"
@@ -18,7 +18,7 @@
       font-family: '<%= ttfName %>';
       -inkscape-font-specification: '<%= ttfName %> <%= ttfStyle %>';
       font-size: 36px;
-      line-height: 125%;
+      line-height: 1;
       letter-spacing: 0px;
       word-spacing: 0px;
       fill: #000000;
