--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ html
   head
     meta(charset='utf-8')
     title= title
+    link(rel="stylesheet" href="/app.css")
     script(src="https://code.jquery.com/jquery-3.1.0.min.js")
   body
     h1= title
