--- a/public/app.css
+++ b/public/app.css
@@ -2,8 +2,18 @@
   /*height: 150px;*/
 }
 
-.info code {
+.info span {
+  display: inline-flex;
+  padding: 3px 6px;
+  border-radius: 2px;
+}
+.info code:first-child {
   margin-right: 0.75em;
+}
+.info span {
+  background-color: #eee;
+}
+.info code {
   color: #757575;
 }
 
